fetch rdv from the back

--- a/src/components/FindHospitalButton.css
+++ b/src/components/FindHospitalButton.css
@@ -1,4 +1,3 @@
-/* src/components/FindHospitalButton.css */
 button {
     background-color: #4caf50;
     color: white;
@@ -7,3 +6,8 @@ button {
     cursor: pointer;
   }
 
+.success-message {
+    color: green;
+    font-size: 18px;
+    font-weight: bold;
+}
